# TCC

./: .gitmodules  caracterização.html  caracterização.md  prova.ipynb  prova.md
Cpp/: CMakeLists.txt  install.sh  main.cpp
Cpp/examples/: CMakeLists.txt  main.cpp
Cpp/glad/include/glad/: glad.h
Cpp/glad/src/: glad.c
Cpp/include/: BAS.hpp  BackEnd.hpp  Constants.hpp  Filter.hpp  FrontEnd.hpp  Goertzel.hpp  Recorder.hpp  Utils.hpp  WBAS.hpp
Cpp/src/: BAS.cpp  BackEnd.cpp  FrontEnd.cpp  Goertzel.cpp
Cpp/templates/: BAS.tpp  Filter.tpp  Goertzel.tpp  Recorder.tpp  WBAS.tpp
